Fixed button alignment issue.
Fixes #7287

--- a/src/Orchard.Web/Themes/TheAdmin/Assets/Less/orchard-content-items.less
+++ b/src/Orchard.Web/Themes/TheAdmin/Assets/Less/orchard-content-items.less
@@ -353,7 +353,7 @@ button, a.button {
     margin-bottom: 0; // For input.btn
     font-weight: @btn-font-weight;
     text-align: center;
-    vertical-align: middle;
+    vertical-align: top;
     touch-action: manipulation;
     cursor: pointer;
     background-image: none; // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214
